<resources>
    <string name="app_name">WomenInTechConnect</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="new_user_register_here">New user:</string>
    <string name="register">register</string>
    <string name="user_name">User name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="sign_up">sign up</string>
    <string name="welcome_to_WIT_Connect">Welcome to WITConnect</string>
    <string name="enter_your_details_here">Enter your details here:-</string>
    <string name="about_us">About Us</string>
    <string name="AboutUs" />
    <string name="profile">profile</string>
    <string name="chat">Chat</string>
    <string name="files">Files</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="username">UserName</string>
    <string name="home">Home Page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="welcome_nv">Welcome:</string>
    <string name="chatroom">chatRoom</string>
    <string name="User_profile">profileUser</string>
    <string name="download_files">Download files</string>
    <string name="settings">Settings</string>
    <string name="Help_page">help</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="guide">An email will be sent to reset password</string>
    <string name="enter_your_email">Enter your registered email</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userprofile">profile</string>
    <string name="add">add profile pic here</string>
    <string name="user_image">user_image</string>
    <string name="profession">Profession:</string>
    <string name="frgt">forgot password?click</string>
    <string name="profilename">Name:</string>
    <string name="contact">Contact:</string>
    <string name="prof_profession">Profession:</string>
    <string name="role">Role:</string>
    <string name="updatebtn">UPDATE</string>
    <string name="connect_mentor">Connect Mentor</string>
    <string name="upload_files">upload files:</string>

    <string-array name="Role">
        <item>Admin</item>
        <item>Mentor</item>
        <item>Mentee</item>
    </string-array>
    <string name="title_activity_mentor">Mentor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="wit">WIT CONNECT APP</string>
    <string name="connect">TODO</string>
    <string name="send_message">send message</string>
    <string name="select_file">Select file</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="selected_file">selected file</string>
    <string name="message">message</string>
    <string name="helpinfo">For more information contact the system administrator via: sashaachi@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="how_may_we_help_you">How may we help you?</string>
    <string name="sendHelp">Send</string>
</resources>
