<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:orderInCategory="100"
            android:title="@string/connect_mentor" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:orderInCategory="200"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/files"
            android:orderInCategory="300"
            android:title="@string/files" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:orderInCategory="400"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:orderInCategory="500"
            android:title="@string/help" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:orderInCategory="600"
        android:title="@string/logout" />

</menu>