<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_files"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        />
    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="100dp"
        android:text="@string/select_file"/>
    <TextView
        android:id="@+id/tv_selectedfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_file"
        android:textSize="18sp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="170dp"/>
    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="110dp"
        android:text="@string/upload"/>
    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="110dp"
        android:text="@string/download"/>


</RelativeLayout>