<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logIn">


    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="113dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_email"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:visibility="visible"
        tools:ignore="OnClick" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frgt"
        android:textSize="18sp"
        android:layout_marginTop="320dp"
        android:layout_marginStart="100dp"
        android:id="@+id/tv_forgot"
        />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="360dp"
        android:text="@string/new_user_register_here"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/button_shape"
        android:text="@string/register" />




</RelativeLayout>