<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:inputType="textEmailAddress"
        android:id="@+id/et_regEmail"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="150dp"
        android:layout_marginStart="130dp"
        android:id="@+id/btn_reset" />


</RelativeLayout>