<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">


    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@mipmap/ic_launcher_round"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/user_image" />
    <EditText
        android:id="@+id/et_Newname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="180dp"
        android:hint="@string/profilename"
        android:textSize="22sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_Newcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="230dp"
        android:hint="@string/contact"
        android:textSize="22sp"
        android:inputType="text" />
    <EditText
        android:id="@+id/et_Newprofession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        android:hint="@string/profession"
        android:textSize="22sp"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="390dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/button_shape"
        android:text="Save" />

</RelativeLayout>